date changed to 'soon'

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<div class="features-slider">
 								<ul class="slides" id="featuresSlider">
 									<li id="a">
-										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL has been scheduled on JANUARY 8, 2016. One of its kind, this awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.
+										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be scheduled soon. One of its kind, this awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.
 </p>
 									</li>
 									<li id="b">
@@ -116,7 +116,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Time & Venue</h1>
-								<p>This year VIDHAIGAL has been scheduled on JANUARY 8, 2016.<br>This awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
+								<p>This year VIDHAIGAL will be scheduled soon.<br>This awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
