Included copyrights and date

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
 <html lang="en" class="no-js">
 	<head>
 		<meta charset="utf-8">
@@ -21,29 +18,9 @@
 		<link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
 		<link href="css/styles.css" rel="stylesheet">
 		<link href="css/queries.css" rel="stylesheet">
-		<!-- Facebook and Twitter integration -->
-		<meta property="og:title" content=""/>
-		<meta property="og:image" content=""/>
-		<meta property="og:url" content=""/>
-		<meta property="og:site_name" content=""/>
-		<meta property="og:description" content=""/>
-		<meta name="twitter:title" content="" />
-		<meta name="twitter:image" content="" />
-		<meta name="twitter:url" content="" />
-		<meta name="twitter:card" content="" />
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-		<![endif]-->
 		<link rel="shortcut icon" href="img/logo.jpg">
 	</head>
 	<body>
-		<!--[if lt IE 7]>
-		<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-		<![endif]-->
-		<!-- open/close -->
 		<header>
 			<section class="hero">
 				<div class="texture-overlay"></div>
@@ -86,7 +63,7 @@
 						<div class="features-slider">
 								<ul class="slides" id="featuresSlider">
 									<li id="a">
-										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be scheduled soon. One of its kind, this awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.
+										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be on 7th February. One of its kind, this awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.
 </p>
 									</li>
 									<li id="b">
@@ -116,7 +93,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Time & Venue</h1>
-								<p>This year VIDHAIGAL will be scheduled soon.<br>This awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
+								<p>This year VIDHAIGAL will be on 7th February.<br>This awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
@@ -181,7 +158,7 @@
 					<div class="col-md-12">
 						<h1>Sponsors</h1>
 						<p>The backbone of each and every successful event is its sponsors.<br>Without their monetary support and big heart, to play a part in improving the society for the better; it’s impossible to throw together such a huge event.<br>We’ll always be thankful to our sponsors, for without them, this dream would’ve still remained a dream, instead of blossoming into a beautiful reality!<br>Nothing we can say will ever convey the amount of gratitude, we owe to you for the kindness and generosity you have bestowed upon us.</p>
-						<p><a href="Sponsors/list.jpg" class="arrow-btn">Previous Sponsors <i class="fa fa-chevron-circle-right"></i></a></p>
+						<p><a href="Sponsors/list.jpg" class="arrow-btn" target="_blank">Previous Sponsors <i class="fa fa-chevron-circle-right"></i></a></p>
 					</div>
 				</div>
 			</div>
@@ -319,10 +296,10 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-					<div class="col-md-5">
-						<p>NSS Unit 2, sincerely thanks<br>Dr. Narayanasamy Palanisamy, Dean : CEG and Mr. K. Praveen , Program Officer, NSS; for their constant guidance and unending support.</p>
+					<div class="col-md-6">
+						<h2>NSS Unit 2, sincerely thanks<br>Dr. Narayanasamy Palanisamy, Dean : CEG and<br>Mr. K. Praveen , Program Officer, NSS;<br>for their constant guidance and unending support.</h2>
 					</div>
-					<div class="col-md-7">
+					<div class="col-md-6">
 						<ul class="footer-nav">
 							<li><a href="#about">About</a></li>
 							<li><a href="#features">More</a></li>
@@ -331,6 +308,7 @@
 						</ul>
 					</div>
 				</div>
+				<p>&copy; Copyright 2016 Vidhaigal | Design by <a href="http://prabhakaran9397.github.io/" target='_blank'>Prabhakaran</a> | Content by <a href="http://elakkiaparthipan.wordpress.com/" target='_blank'>Elakkia</a> | Supervised by <a href="https://plus.google.com/108785919105808172924/" target='_blank'>Bhavana</a></p>
 			</div>
 		</footer>
 		<div class="overlay overlay-boxify">
