--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<div class="features-slider">
 								<ul class="slides" id="featuresSlider">
 									<li id="a">
-										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be on 5th February. One of its kind, this awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.
+										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be on 4th January 2017. One of its kind, this awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.
 </p>
 									</li>
 									<li id="b">
@@ -111,7 +111,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Events</h1>
-								<p>Every year Vidhaigal entertains the kids, by organising several entertaining and convivial events such as<br>•Singing<br>•Instrument Playing<br>•Dance<br>•Drawing •MIME<br>•Memory Game •Quiz<br>•Thirukkural Recitation <br>•Essay Writing •Poetry Writing<br>•Lemon & Spoon</p>
+								<p>Every year Vidhaigal entertains the kids, by organising several entertaining and convivial events such as<br>•Singing<br>•Talent Exposure Events<br>•Dance<br>•Drawing •MIME<br>•Memory Game •Quiz<br>•Thirukkural Recitation <br>•Essay Writing •Poetry Writing<br>•Lemon & Spoon</p>
 							</div>
 						</div>
 
@@ -285,10 +285,10 @@
 					<div class="col-md-12 text-center wp4">
                 		<h1>Contact our NSS unit-2</h1>
                 		<h2>Point of Contact</h2>
-                		<h2>BMS Bharathi <strong><a target="_blank" href="tel:9597307529">+91 9597307529</a></strong></h2>
-                		<h2>S Sumathi <strong><a target="_blank" href="tel:9750667280">+91 9750667280</a></strong></h2>
+                		<h2>S Shankar <strong><a target="_blank" href="tel:9962646352">+91 9962646352</a></strong></h2>
+                		<h2>S Ilakiya <strong><a target="_blank" href="tel:9489885505">+91 9489885505</a></strong></h2>
 						<a target="_blank" href="mailto:nssunit2organisers@gmail.com" class="learn-btn animated fadeInUp"><i class="fa fa-envelope"></i><span> &nbsp Mail</span></a>
-						<a target="_blank" href="https://www.facebook.com/Vidhaigal-296335400575847/" class="learn-btn animated fadeInUp"><i class="fa fa-facebook"></i><span> &nbsp Facebook</span></a>
+						<a target="_blank" href="https://www.facebook.com/cegvidhaigal" class="learn-btn animated fadeInUp"><i class="fa fa-facebook"></i><span> &nbsp Facebook</span></a>
 					</div>
 				</div>
 			</div>
@@ -313,7 +313,7 @@
 						</ul>
 					</div>
 				</div>
-				<p>&copy; Copyright 2016 Vidhaigal | Design by <a href="http://prabhakaran9397.github.io/" target='_blank'>Prabhakaran</a> | Content by <a href="http://elakkiaparthipan.wordpress.com/" target='_blank'>Elakkia</a> | Supervised by <a href="https://plus.google.com/108785919105808172924/" target='_blank'>Bhavana</a></p>
+				<p>&copy; Copyright 2017 Vidhaigal | Design by <a href="http://prabhakaran9397.github.io/" target='_blank'>Prabhakaran</a> | Content by <a href="http://elakkiaparthipan.wordpress.com/" target='_blank'>Elakkia</a> | Supervised by <a href="https://plus.google.com/108785919105808172924/" target='_blank'>Bhavana</a></p>
 			</div>
 		</footer>
 		<div class="overlay overlay-boxify">
