Vidhaigal 18 first commit

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -22,9 +22,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="../index.html"><img src="../img/logo.jpg" height="80" width="80" alt="Vidhaigal Logo"></a>
-						<h1>Vidhaigal</h1>
-						<p>Gallery</p>
+						<h1 style="color: #080808">Gallery</h1>
+						<a href="../index.html"><img src="../img/logo.jpg" height="150" width="150" style="border-radius: 5%" alt="Vidhaigal Logo"></a>
 					</header>
 
 				<!-- Thumbnail -->
