--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Vidhaigal 2017</title>
-		<meta name="description" content="A magnanimous program organised to support a social cause by the volunteers of CEG NSS unit 2." />
+		<title>Vidhaigal 2018</title>
+		<meta name="description" content="A magnanimous event organised by NSS unit 2, CEG that entertains & also brings out hidden talents of the special children" />
 		<meta name="keywords" content="vidhaigal, vidiyal, adeegga, service, nss, ceg, event, tamilnadu, chennai, anna university" />
 		<!-- Bootstrap -->
 		<script src="js/modernizr.custom.js"></script>
@@ -27,7 +27,7 @@
 				<div class="container">
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
-							<a href="#"><img src="img/logo.jpg" height="60" width="60" alt="Vidhaigal Logo"></a>
+							<a href="#"><img src="img/logo.jpg" style="border-radius: 5%;" height="120" width="120" alt="Vidhaigal Logo"></a>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
 							<p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a>
@@ -35,7 +35,7 @@
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
-							<h1 class="animated fadeInDown"><strong>VIDHAIGAL'17</strong></h1><h2>விதைத்த விதைகள் மரமாய் <br>வளர்ந்து விடியலைக் காண்போம்</h2>
+							<h1 class="animated fadeInDown"><strong>VIDHAIGAL'18</strong></h1><h2>விதைத்த விதைகள் மரமாய் <br>வளர்ந்து விடியலைக் காண்போம்</h2>
 							<a href="#about" class="learn-btn animated fadeInUp">About Us <i class="fa fa-arrow-down"></i></a>
 						</div>
 					</div>
@@ -46,7 +46,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<h1><a href="https://www.youtube.com/embed/B7YigW2engU?rel=0&amp;controls=0&amp;showinfo=0" class="youtube-media"><i class="fa fa-play-circle-o"></i>A glimpse of Vidhaigal, Click here to Watch</a></h1>
+						<h1><a href="https://www.facebook.com/cegvidhaigal/videos/742708039271912"><i class="fa fa-play-circle-o"></i>A Vidhaigal promo video, Click here to Watch</a></h1>
 					</div>
 				</div>
 			</div>
@@ -63,7 +63,7 @@
 						<div class="features-slider">
 								<ul class="slides" id="featuresSlider">
 									<li id="a">
-										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be on 4th January 2017. One of its kind, this awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.
+										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be on 2nd March, 2018. One of its kind, this awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.
 </p>
 									</li>
 									<li id="b">
@@ -93,7 +93,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Time & Venue</h1>
-								<p>This year VIDHAIGAL will be on 4th January.<br>This awe-inspiring event will be conducted in the TAG Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
+								<p>This year VIDHAIGAL will be on 2nd March.<br>This awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
@@ -102,7 +102,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Schools</h1>
-								<p>Some of our precious participants are from<br>•Ajay Higher Secondary School for Deaf<br>•Deepam School for Special Children<br>•Annai Special School<br>•Dr. MGR Home & Higher Secondary School for the Speech and Hearing Impaired<br>•Little Flower Convent School for Blind and Deaf</p>
+								<p>Some of our precious participants are from<br>•Deepam School for Special Children<br>•Annai Special School<br>•Dr. MGR Home & Higher Secondary School for the Speech and Hearing Impaired<br>•Little Flower Convent School for Blind and Deaf<br>•C.S.I. Higher Secondary School for the Deaf<br>and so on...</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-3 wp2 delay-1s">
@@ -111,7 +111,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Events</h1>
-								<p>Every year Vidhaigal entertains the kids, by organising several entertaining and convivial events such as<br>•Singing<br>•Talent Exposure Events<br>•Dance<br>•Drawing •MIME<br>•Memory Game •Quiz<br>•Thirukkural Recitation <br>•Essay Writing •Poetry Writing<br>•Lemon & Spoon</p>
+								<p>Every year Vidhaigal entertains the kids, by organising several entertaining and convivial events such as<br>•Singing<br>•Talent Exposure Events<br>•Dance<br>•Drawing •MIME<br>•Memory Game •Quiz<br>•Paper crafts •Poetry Writing<br>•Lemon & Spoon etc...</p>
 							</div>
 						</div>
 
@@ -158,7 +158,7 @@
 					<div class="col-md-12">
 						<h1>Sponsors</h1>
 						<p>The backbone of each and every successful event is its sponsors.<br>Without their monetary support and big heart, to play a part in improving the society for the better; it’s impossible to throw together such a huge event.<br>We’ll always be thankful to our sponsors, for without them, this dream would’ve still remained a dream, instead of blossoming into a beautiful reality!<br>Nothing we can say will ever convey the amount of gratitude, we owe to you for the kindness and generosity you have bestowed upon us.</p>
-						<p><a href="Sponsors/list.jpg" class="arrow-btn" target="_blank">Previous Sponsors <i class="fa fa-chevron-circle-right"></i></a></p>
+						<!--<p><a href="Sponsors/list.jpg" class="arrow-btn" target="_blank">Previous Sponsors <i class="fa fa-chevron-circle-right"></i></a></p>-->
 					</div>
 				</div>
 			</div>
@@ -285,8 +285,10 @@
 					<div class="col-md-12 text-center wp4">
                 		<h1>Contact our NSS unit-2</h1>
                 		<h2>Point of Contact</h2>
-                		<h2>S Shankar <strong><a target="_blank" href="tel:9962646352">+91 9962646352</a></strong></h2>
-                		<h2>S Ilakiya <strong><a target="_blank" href="tel:9489885505">+91 9489885505</a></strong></h2>
+                		<h2>Madhu C <strong><a target="_blank" href="tel:9600448012">+91 9600448012</a></strong></h2>
+                		<h2>Malaiarasi P <strong><a target="_blank" href="tel:7708004423">+91 7708004423</a></strong></h2>
+						<h2>Prasanth P <strong><a target="_blank" href="tel:9965226501">+91 9965226501</a></strong></h2>
+						<h2>Gevi Akshaya C <strong><a target="_blank" href="tel:9994987132">+91 9994987132</a></strong></h2>
 						<a target="_blank" href="mailto:nssunit2organisers@gmail.com" class="learn-btn animated fadeInUp"><i class="fa fa-envelope"></i><span> &nbsp Mail</span></a>
 						<a target="_blank" href="https://www.facebook.com/cegvidhaigal" class="learn-btn animated fadeInUp"><i class="fa fa-facebook"></i><span> &nbsp Facebook</span></a>
 					</div>
@@ -308,12 +310,12 @@
 					<ul><br></ul>
 						<ul>
 						<li>
-						<h3>NSS Unit 2, sincerely thanks<br>Dr. Narayanasamy Palanisamy, Dean : CEG and<br>Mr. K. Praveen , Program Officer, NSS;<br>for their constant guidance and unending support.</h3>
+						<h3>NSS Unit 2, sincerely thanks<br>Dr. T.V.Geetha, Dean : CEG ,<br>Mr. K. Praveen , Program Officer, NSS unit 2 , <br>Dr. R.Ramesh , NSS coordinator , Anna university & <br>Mr. Arul chelvan , NSS coordinator , College of Engineering Guindy<br>for their constant guidance and unending support.</h3>
 						</li>
 						</ul>
 					</div>
 				</div>
-				<p>&copy; Copyright 2017 Vidhaigal | Design by <a href="http://prabhakaran9397.github.io/" target='_blank'>Prabhakaran</a> | Content by <a href="http://elakkiaparthipan.wordpress.com/" target='_blank'>Elakkia</a> | Supervised by <a href="https://plus.google.com/108785919105808172924/" target='_blank'>Bhavana</a></p>
+				<p>&copy; Copyright 2018 Vidhaigal | Design by <a href="http://prabhakaran9397.github.io/" target='_blank'>Prabhakaran</a> | Content by <a href="http://elakkiaparthipan.wordpress.com/" target='_blank'>Elakkia</a> | Supervised by <a href="https://plus.google.com/108785919105808172924/" target='_blank'>Bhavana</a> | Maintained by NSS unit 2 volunteers</p>
 			</div>
 		</footer>
 		<div class="overlay overlay-boxify">
