--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
-							<h1 class="animated fadeInDown"><strong>VIDHAIGAL'18</strong></h1><h2>விதைத்த விதைகள் மரமாய் <br>வளர்ந்து விடியலைக் காண்போம்</h2>
+							<h1 class="animated fadeInDown"><strong>VIDHAIGAL'19</strong></h1><h2>விதைத்த விதைகள் மரமாய் <br>வளர்ந்து விடியலைக் காண்போம்</h2>
 							<a href="#about" class="learn-btn animated fadeInUp">About Us <i class="fa fa-arrow-down"></i></a>
 						</div>
 					</div>
@@ -63,7 +63,7 @@
 						<div class="features-slider">
 								<ul class="slides" id="featuresSlider">
 									<li id="a">
-										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be on 2nd March, 2018. One of its kind, this awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.
+										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be on 19th February,2019. One of its kind, this awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.
 </p>
 									</li>
 									<li id="b">
@@ -93,7 +93,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Time & Venue</h1>
-								<p>This year VIDHAIGAL will be on 2nd March.<br>This awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
+								<p>This year VIDHAIGAL will be on 19th February.<br>This awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
@@ -285,10 +285,10 @@
 					<div class="col-md-12 text-center wp4">
                 		<h1>Contact our NSS unit-2</h1>
                 		<h2>Point of Contact</h2>
-                		<h2>Madhu C <strong><a target="_blank" href="tel:9600448012">+91 9600448012</a></strong></h2>
-                		<h2>Malaiarasi P <strong><a target="_blank" href="tel:7708004423">+91 7708004423</a></strong></h2>
-						<h2>Prasanth P <strong><a target="_blank" href="tel:9965226501">+91 9965226501</a></strong></h2>
-						<h2>Gevi Akshaya C <strong><a target="_blank" href="tel:9994987132">+91 9994987132</a></strong></h2>
+                		<h2>Mukunthan A <strong><a target="_blank" href="tel:8489391114">+91 8489391114</a></strong></h2>
+                		<h2>Nivethithai E <strong><a target="_blank" href="tel:9940274118">+91 9940274118</a></strong></h2>
+						<h2>Ariharan V <strong><a target="_blank" href="tel:9629369319">+91 9629369319</a></strong></h2>
+						<h2>Moogambigai S <strong><a target="_blank" href="tel:9677709611">+91 9677709611</a></strong></h2>
 						<a target="_blank" href="mailto:nssunit2organisers@gmail.com" class="learn-btn animated fadeInUp"><i class="fa fa-envelope"></i><span> &nbsp Mail</span></a>
 						<a target="_blank" href="https://www.facebook.com/cegvidhaigal" class="learn-btn animated fadeInUp"><i class="fa fa-facebook"></i><span> &nbsp Facebook</span></a>
 					</div>
