--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Events</h1>
-								<p>Every year Vidhaigal entertains the kids, by organising several entertaining and convivial events such as<br>•Singing<br>•Talent Exposure Events<br>•Dance<br>•Drawing •MIME<br>•Memory Game •Quiz<br>•Paper crafts •Poetry Writing<br>•Lemon & Spoon etc...</p>
+								<p>Every year Vidhaigal entertains the kids, by organising several entertaining and convivial events such as<br>•Singing<br>•Talent Exposure Events<br>•Dance<br>•Drawing<br> etc...</p>
 							</div>
 						</div>
 
