--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 								</figcaption>
 							</figure>
 						</li>
+						
 						<li>
 							<figure>
 								<img src="img/03-screenshot.jpg" alt="Screenshot 01">
@@ -270,6 +271,19 @@
 									<a href="img/large/08.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
 										<p>Organising is a journey, not a destination.</p>
+									</a>
+								</div>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img src="img/nss.jpg" alt="Screenshot 01">
+								<figcaption>
+								<div class="caption-content">
+									<a href="img/nss.jpg" class="single_image">
+										<i class="fa fa-search"></i><br>
+										<p>It is a kingly act to assist the fallen.</p>
 									</a>
 								</div>
 								</figcaption>
