--- a/index.html
+++ b/index.html
@@ -289,6 +289,45 @@
 								</figcaption>
 							</figure>
 						</li>
+						<li>
+							<figure>
+								<img src="img/nss2.jpg" alt="Screenshot 01">
+								<figcaption>
+								<div class="caption-content">
+									<a href="img/nss.jpg" class="single_image">
+										<i class="fa fa-search"></i><br>
+										<p>It is a kingly act to assist the fallen.</p>
+									</a>
+								</div>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img src="img/nss.jpg" alt="Screenshot 01">
+								<figcaption>
+								<div class="caption-content">
+									<a href="img/nss3.jpg" class="single_image">
+										<i class="fa fa-search"></i><br>
+										<p>It is a kingly act to assist the fallen.</p>
+									</a>
+								</div>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img src="img/nss.jpg" alt="Screenshot 01">
+								<figcaption>
+								<div class="caption-content">
+									<a href="img/nss4.jpg" class="single_image">
+										<i class="fa fa-search"></i><br>
+										<p>It is a kingly act to assist the fallen.</p>
+									</a>
+								</div>
+								</figcaption>
+							</figure>
+						</li>
 					</ul>
 				</div>
 			</div>
