--- a/index.html
+++ b/index.html
@@ -279,6 +279,63 @@
 						
 					</ul>
 				</div>
+				<div class="row">
+					<ul class="grid">
+						<li>
+							<figure>
+								<img src="img/05-screenshot.jpg" alt="Screenshot 01">
+								<figcaption>
+								<div class="caption-content">
+									<a href="img/large/05.jpg" class="single_image">
+										<i class="fa fa-search"></i><br>
+										<p>Keep your face to the Sunshine and you will not see the Shadows.</p>
+									</a>
+								</div>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img src="img/06-screenshot.jpg" alt="Screenshot 01">
+								<figcaption>
+								<div class="caption-content">
+									<a href="img/large/06.jpg" class="single_image">
+										<i class="fa fa-search"></i><br>
+										<p>I don't have a dis-ability, I have a different-ability.	</p>
+									</a>
+								</div>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img src="img/07-screenshot.jpg" alt="Screenshot 01">
+								<figcaption>
+								<div class="caption-content">
+									<a href="img/large/07.jpg" class="single_image">
+										<i class="fa fa-search"></i><br>
+										<p>For your unwavering determinaton, you are truely appreciated!</p>
+									</a>
+								</div>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img src="img/08-screenshot.jpg" alt="Screenshot 01">
+								<figcaption>
+								<div class="caption-content">
+									<a href="img/large/08.jpg" class="single_image">
+										<i class="fa fa-search"></i><br>
+										<p>Organising is a journey, not a destination.</p>
+									</a>
+								</div>
+								</figcaption>
+							</figure>
+						</li>
+						
+					</ul>
+				</div>
 			</div>
 		</section>
 		<section class="download" id="download">
