--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 					<ul class="grid">
 						<li>
 							<figure>
-								<img src="nss.jpg" alt="Screenshot 01">
+								<img src="img/nss.jpg" alt="Screenshot 01">
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/05.jpg" class="single_image">
@@ -296,7 +296,7 @@
 						</li>
 						<li>
 							<figure>
-								<img src="nss4.jpg" alt="Screenshot 01">
+								<img src="img/nss4.jpg" alt="Screenshot 01">
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/06.jpg" class="single_image">
@@ -309,7 +309,7 @@
 						</li>
 						<li>
 							<figure>
-								<img src="nss3.jpg" alt="Screenshot 01">
+								<img src="img/nss3.jpg" alt="Screenshot 01">
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/07.jpg" class="single_image">
@@ -322,7 +322,7 @@
 						</li>
 						<li>
 							<figure>
-								<img src="nss1.jpg" alt="Screenshot 01">
+								<img src="img/nss1.jpg" alt="Screenshot 01">
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/08.jpg" class="single_image">
