--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
-							<h1 class="animated fadeInDown"><strong>VIDHAIGAL'19</strong></h1><h2>விதைத்த விதைகள் மரமாய் <br>வளர்ந்து விடியலைக் காண்போம்</h2>
+							<h1 class="animated fadeInDown"><strong>VIDHAIGAL'20</strong></h1><h2>விதைத்த விதைகள் மரமாய் <br>வளர்ந்து விடியலைக் காண்போம்</h2>
 							<a href="#about" class="learn-btn animated fadeInUp">About Us <i class="fa fa-arrow-down"></i></a>
 						</div>
 					</div>
@@ -63,7 +63,7 @@
 						<div class="features-slider">
 								<ul class="slides" id="featuresSlider">
 									<li id="a">
-										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be on 19th February,2019. One of its kind, this awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.
+										<p><strong>“Hold my hand and walk with me.<br>We must break the back of social inequity;<br>We must empower every individual with a disability<br>To live with dignity in an inclusive society.”</strong><br>With these words as our motto and the happiness of the kids as our only aim,<br>NSS Unit-2 is back with another fantabulous instalment of VIDHAIGAL.<br>This year VIDHAIGAL will be on 21th February,2020. One of its kind, this awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.
 </p>
 									</li>
 									<li id="b">
@@ -93,7 +93,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Time & Venue</h1>
-								<p>This year VIDHAIGAL will be on 19th February.<br>This awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
+								<p>This year VIDHAIGAL will be on 21th February.<br>This awe-inspiring event will be conducted in the Vivekananda Auditorium, of the College of Engineering, Guindy.<br>The memories of Vidhaigal will always be enshrined in our hearts.<br>We bring to you some of the charming and unforgettable snaps from the past years.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
@@ -344,10 +344,10 @@
 					<div class="col-md-12 text-center wp4">
                 		<h1>Contact our NSS unit-2</h1>
                 		<h2>Point of Contact</h2>
-                		<h2>Mukunthan A <strong><a target="_blank" href="tel:8489391114">+91 8489391114</a></strong></h2>
-                		<h2>Nivethithai E <strong><a target="_blank" href="tel:9940274118">+91 9940274118</a></strong></h2>
-						<h2>Ariharan V <strong><a target="_blank" href="tel:9629369319">+91 9629369319</a></strong></h2>
-						<h2>Moogambigai S <strong><a target="_blank" href="tel:9677709611">+91 9677709611</a></strong></h2>
+                		<h2>Shafeeq S <strong><a target="_blank" href="tel:8939559852">+91 8939559852</a></strong></h2>
+                		<h2>Sangavi S <strong><a target="_blank" href="tel:8056928056">+91 8056928056</a></strong></h2>
+						<h2>Raghu Ram M <strong><a target="_blank" href="tel:9597395593">+91 9597395593</a></strong></h2>
+						<h2>Mehraj Fathima Z <strong><a target="_blank" href="tel:7395949773">+91 7395949773</a></strong></h2>
 						<a target="_blank" href="mailto:nssunit2organisers@gmail.com" class="learn-btn animated fadeInUp"><i class="fa fa-envelope"></i><span> &nbsp Mail</span></a>
 						<a target="_blank" href="https://www.facebook.com/cegvidhaigal" class="learn-btn animated fadeInUp"><i class="fa fa-facebook"></i><span> &nbsp Facebook</span></a>
 					</div>
@@ -369,12 +369,12 @@
 					<ul><br></ul>
 						<ul>
 						<li>
-						<h3>NSS Unit 2, sincerely thanks<br>Dr. T.V.Geetha, Dean : CEG ,<br>Mr. K. Praveen , Program Officer, NSS unit 2 , <br>Dr. R.Ramesh , NSS coordinator , Anna university & <br>Mr. Arul chelvan , NSS coordinator , College of Engineering Guindy<br>for their constant guidance and unending support.</h3>
+						<h3>NSS Unit 2, Sincerely Thanks<br>Dr. T.V.Geetha, Dean : CEG ,<br>Dr. R Kanmani Shanmuga Priya , Program Officer, NSS unit 2 , <br>Dr. R.Ramesh , NSS coordinator , Anna university & <br>Mr. Arul chelvan , NSS coordinator , College of Engineering Guindy<br>for their constant guidance and unending support.</h3>
 						</li>
 						</ul>
 					</div>
 				</div>
-				<p>&copy; Copyright 2018 Vidhaigal | Design by <a href="http://prabhakaran9397.github.io/" target='_blank'>Prabhakaran</a> | Content by <a href="http://elakkiaparthipan.wordpress.com/" target='_blank'>Elakkia</a> | Supervised by <a href="https://plus.google.com/108785919105808172924/" target='_blank'>Bhavana</a> | Maintained by NSS unit 2 volunteers</p>
+				<p>&copy; Copyright 2020 Vidhaigal | Design by <a href="http://prabhakaran9397.github.io/" target='_blank'>Prabhakaran</a> | Content by <a href="http://elakkiaparthipan.wordpress.com/" target='_blank'>Elakkia</a> | Supervised by <a href="https://plus.google.com/108785919105808172924/" target='_blank'>Bhavana</a> | Maintained by NSS unit 2 volunteers</p>
 			</div>
 		</footer>
 		<div class="overlay overlay-boxify">
